# django-secux

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
django_secux/: __init__.py  apps.py  captcha.py  decorator.py  middleware.py  models.py  signals.py  tools.py  urls.py  user.py  views.py
django_secux/templatetags/: secux_captcha.py
doc/: configuration.md  contributing.md  index.md  installation.md  usage.md
