[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-secux"
version = "5.9.0"
description = "All-in-One Django Security & Optimization"
readme = "README.md"
authors = [{ name = "XO Aria", email = "hf18950@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "Django>=4.2",
    "Pillow>=9.0.0"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/xo-aria/django-secux"
Repository = "https://github.com/xo-aria/django-secux"
Issues = "https://github.com/xo-aria/django-secux/issues"
